# osiris.admin

./: setup.cfg
demo/sampleapp/: MANIFEST.in  README.txt  development.ini  production.ini  setup.cfg  setup.py
demo/sampleapp/sampleapp/: i18n.py  interface.py  main.py  resources.py  routing.py
demo/sampleapp/sampleapp/forms/: __init__.py  news.py
demo/sampleapp/sampleapp/models/: __init__.py  account.py  base.py  news.py
demo/sampleapp/sampleapp/scripts/: initializedb.py
demo/sampleapp/sampleapp/tests/: tests.py
demo/sampleapp/sampleapp/views/: error.py  views.py
osiris/admin/: __init__.py  actions.py  directive.py  forms.py  interface.py  model.py  resources.py  routing.py  utils.py  views.py
osiris/admin/forms/: __init__.py  fa.py
osiris/admin/templates/admin/: base.mak  edit.mak  listing.mak  models.mak  new.mak  show.mak
osiris/auth/: __init__.py  directive.py  interface.py  models.py  security.py  views.py
osiris/auth/templates/: base.mak  login.mak
