[metadata]
name = osiris.admin
version = 0.1
summary = Admin framework for Pyramid
author = Nozomu Kaneko
author_email = nozom.kaneko@gmail.com
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
license = MIT
requires =
    pyramid
    SQLAlchemy
    transaction
    zope.sqlalchemy
    pyramid_tm
    formalchemy
    pyramid_formalchemy
    pyramid_fanstatic
    mako

[files]
packages =
    osiris.admin
