[metadata]
name = osiris.admin
version = 0.1
summary = Admin framework for Pyramid
author = Nozomu Kaneko
author_email = nozom.kaneko@gmail.com
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
license = MIT
requires =
    pyramid>=1.3.3
    SQLAlchemy
    transaction
    zope.sqlalchemy
    pyramid_tm
    pyramid_fanstatic
    pyramid_formalchemy
    fa.jquery
    fa.bootstrap
    tw2.core
    tw2.forms
    tw2.jquery
    mako

[files]
packages =
    osiris.admin
    osiris.auth
